--- a/lib.firewall/package.json
+++ b/lib.firewall/package.json
@@ -16,6 +16,7 @@
     ],
     "scripts": {
         "lint": "eslint \"lib/**/*\" \"test/**/*\" --fix",
+        "build": "gulp build",
         "test": "gulp test",
         "coverage": "gulp coverage",
         "purge": "gulp purge"
